# FCG-Exam-PACMAN

./: CMakeLists.txt  FCGpacman.md
Tappa00/: TileMap.cpp  constant.h  main.cpp  utils.cpp  utils.h
Tappa01/: Player.cpp  Player.h  TileMap.cpp  TileMap.h  constant.h  main.cpp
Tappa02/: Player.cpp  Player.h  TileMap.cpp  TileMap.h  constant.h  main.cpp  utils.h
Tappa03/: GameManager.cpp  GameManager.h  Player.cpp  Player.h  Score.h  TileMap.cpp  TileMap.h  main.cpp
Tappa04/: GameManager.cpp  GameManager.h  Player.cpp  Player.h  bonusFruit.cpp  bonusFruit.h  main.cpp
Tappa05/: GameManager.cpp  GameManager.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  Score.cpp  TileMap.cpp  TileMap.h  bonusFruit.cpp  main.cpp
Tappa06/: GameManager.cpp  GameManager.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  TileMap.cpp  TileMap.h  bonusFruit.h  main.cpp  utils.cpp  utils.h
Tappa07/: GameManager.cpp  GameManager.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  Score.h  bonusFruit.cpp  main.cpp
Tappa08/: GameManager.cpp  GameManager.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  TileMap.cpp  TileMap.h  constants.h  main.cpp
Tappa09/: GameManager.cpp  GameManager.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  Score.cpp  TileMap.cpp  TileMap.h  constants.h  main.cpp
